--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,11 @@
+#root {
+  position: relative;
+  padding-top: 0;
+  @media (max-width: 991px) {
+    padding-top: 0;
+  }
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -12,4 +20,16 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  //display: inline-block;
 }
