--- a/src/Atoms/InputsFields/style.module.css
+++ b/src/Atoms/InputsFields/style.module.css
@@ -1,20 +1,12 @@
 .inputs .inputs_wrapper_title {
   font-size: 24px;
-  font-weight: 900;
+  font-weight: 700;
   color: black;
-}
-.inputs .inputs_wrapper .inputs_form {
-  list-style-type: none;
-}
-.inputs .inputs_wrapper .inputs_form_list {
-  width: 100%;
-  min-width: 140px;
-  min-height: 90px;
-  font-size: 1.6rem;
-  padding: 3px;
+  margin: 15px 0;
 }
 .inputs .select {
   width: 450px;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.module.css.map */
