--- a/src/Atoms/InputsFields/style.module.scss
+++ b/src/Atoms/InputsFields/style.module.scss
@@ -1,37 +1,18 @@
 .inputs {
-  //display: flex;
+
   .inputs_wrapper {
 
     &_title {
       font-size: 24px;
-      font-weight: 900;
+      font-weight: 700;
       color: black;
-    }
-
-    .inputs_form {
-      list-style-type: none;
-
-      &_list {
-        width: 100%;
-        min-width: 140px;
-        min-height: 90px;
-        font-size: 1.6rem;
-        padding: 3px;
-        &_point {
-
-        }
-      }
-    }
-
-    .input_search {
-      &_input {
-
-      }
+      margin: 15px 0;
     }
   }
 
   .select {
     width: 450px;
+    cursor: pointer;
   }
 }
 
