--- a/src/Organisms/Search API/style.module.css
+++ b/src/Organisms/Search API/style.module.css
@@ -1,12 +1,14 @@
 .search {
   position: relative;
+  background: #202022;
 }
 .search_first {
   width: 90%;
   height: 80%;
   margin: 25px auto;
-  border: 2px solid #1F2126;
+  border: 2px solid rgba(0, 0, 0, 0.3);
   border-radius: 7px;
+  background: #FFFFFF;
 }
 .search_header {
   display: flex;
@@ -64,11 +66,12 @@
   position: fixed;
   left: 100px;
   height: calc(100% - 60px);
-  border: 2px solid #1F2126;
   border-radius: 7px;
   background: rgba(255, 255, 255, 0.9);
   transition: 1s;
   overflow: scroll;
+  margin-top: 25px;
+  border: 2px solid rgba(0, 0, 0, 0.3);
 }
 @media screen and (min-width: 991px) {
   .search .fixed {
