--- a/src/Atoms/TableData/style.module.scss
+++ b/src/Atoms/TableData/style.module.scss
@@ -1,11 +1,35 @@
 .modal_styles {
   min-width: 80%;
   min-height: 50%;
-  background: cadetblue;
+  //background: #212020;
   display: flex;
   flex-direction: column;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  color: #ffffff;
+
+  .modal_button {
+    background: #ffffff;
+    width: 120px;
+    padding: 12px 17px;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    font-weight: 700;
+    transition: 0.3s;
+    border: 1px solid #27c7cb;
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%);
+    &:hover {
+      color: #ffffff;
+      background: #27c7cb;
+      transition: 0.3s;
+      border: 1px solid black;
+    }
+  }
 }
+
