--- a/src/Atoms/DropdownMenu/style.module.css
+++ b/src/Atoms/DropdownMenu/style.module.css
@@ -2,6 +2,10 @@
   position: relative;
   font-size: 11px;
 }
+.languages:hover {
+  cursor: pointer;
+  color: #27c7cb;
+}
 .languages_navMobile {
   margin-left: 30px;
 }
@@ -13,7 +17,7 @@
 .languages:after {
   width: 9px;
   height: 9px;
-  border: 2px solid #1F2126;
+  border: 2px solid #ffffff;
   border-top: none;
   border-right: none;
   transform: rotate(-45deg);
