--- a/src/Atoms/DropdownMenu/style.module.scss
+++ b/src/Atoms/DropdownMenu/style.module.scss
@@ -1,6 +1,10 @@
 .languages {
   position: relative;
   font-size: 11px;
+   &:hover {
+     cursor: pointer;
+     color: #27c7cb;
+   }
   &_navMobile {
     margin-left: 30px;
   }
@@ -11,7 +15,7 @@
   &:after {
     width: 9px;
     height: 9px;
-    border: 2px solid #1F2126;
+    border: 2px solid #ffffff;
     border-top: none;
     border-right: none;
     transform: rotate(-45deg);
