--- a/src/Molecules/Header/style.module.scss
+++ b/src/Molecules/Header/style.module.scss
@@ -1,5 +1,5 @@
 .header {
-  background: #F2E9DB;
+  background: #181515;
   height: 60px;
   display: flex;
   align-items: center;
@@ -12,9 +12,10 @@
   top: 0;
   left: 0;
   transition: 0.7s;
+  color: #FFFFFF;
 
   &_visible {
-    background-color: rgba(242, 233, 219, 0.4);
+    background-color: rgba(33, 33, 29, 0.3);
     width: 90%;
     margin: 0 auto;
     top: 25px;
@@ -31,17 +32,19 @@
 
     &_style {
       margin-right: 30px;
-      font-family: Acumin Pro, serif;
+      font-family: "Ink Free", sans-serif;
       font-style: normal;
-      font-weight: normal;
-      font-size: 14px;
+      font-weight: 900;
+      font-size: 20px;
       line-height: 140%;
       letter-spacing: 0.02em;
-      color: #1F2126;
       text-decoration: none;
+      color: #FFFFFF;
+      transition: 0.5s;
 
-      &_select {
-        color: red;
+      &:hover {
+        color: #27c7cb;
+        transition: 0.5s;
       }
     }
   }
@@ -55,21 +58,27 @@
     }
 
     &_style {
-      width: 35px;
-      font-family: Acumin Pro, serif;
-      font-weight: bold;
-      color: #aa7524;
+      font-family: "Ink Free", sans-serif;
+      font-weight: 900;
+      color: #ffffff;
+      transition: 0.5s;
+
+      &:hover {
+        color: #27c7cb;
+        cursor: pointer;
+        transition: 0.5s;
+      }
 
       &_first {
-        font-size: 35px;
+        font-size: 25px;
       }
 
       &_second {
-        font-size: 42px;
+        font-size: 35px;
       }
 
       &_third {
-        font-size: 30px;
+        font-size: 25px;
       }
     }
   }
