--- a/src/Organisms/Intro/style.module.css
+++ b/src/Organisms/Intro/style.module.css
@@ -1,6 +1,7 @@
 .intro {
   display: flex;
   align-items: center;
+  font-family: "Ink Free", sans-serif;
 }
 .intro_first {
   padding: 25px 0;
@@ -20,13 +21,14 @@
 .intro_first_link {
   display: flex;
   align-items: center;
+  font-weight: 900;
 }
 .intro_first_link a {
   padding-top: 25px;
 }
 .intro_second {
   padding: 25px 0;
-  border-bottom: 1px solid blue;
+  border-bottom: 1px solid #27c7cb;
 }
 .intro_second_statistics {
   text-align: center;
@@ -36,25 +38,36 @@
   font-size: 1.8rem;
   border-radius: 3rem;
   padding: 14px 28px;
-  border: 1px solid transparent;
   margin-bottom: 10px;
   margin-right: 10px;
   text-decoration: none;
   cursor: pointer;
-  font-weight: 500;
+  font-family: "Ink Free", sans-serif;
+  font-weight: 900;
   display: inline-block;
-  color: #fff;
-  background: #1e00be;
+  color: black;
+  background: #ffffff;
+  border: 1px solid #27c7cb;
+  transition: 0.5s;
+}
+.intro_second_statistics a:hover {
+  color: #ffffff;
+  background: #27c7cb;
+  border: 1px solid black;
+  transition: 0.5s;
 }
 .intro_third {
   display: flex;
   padding: 25px;
-  padding: 60px 4%;
   width: 100%;
 }
 .intro_third_title {
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
+}
+.intro_third_title h3 {
+  font-weight: 900;
 }
 .intro_third_lists {
   display: flex;
@@ -63,7 +76,7 @@
 }
 .intro_third_lists_list {
   width: 100%;
-  border-top: 1px solid #949494;
+  border-top: 1px solid #27c7cb;
   padding: 18px 0;
   margin-bottom: 0;
 }
@@ -84,17 +97,19 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  font-weight: 900;
 }
 .intro_third_lists_list_date_number {
   font-size: 48px;
   line-height: 100%;
   text-align: center;
-  font-weight: 500;
   letter-spacing: -0.12rem;
+  font-weight: 900;
 }
 .intro_third_lists_list_date_month {
   font-size: 14px;
   line-height: 20px;
+  font-weight: 900;
 }
 .intro .description {
   margin-left: 18px;
@@ -104,16 +119,16 @@
   display: inline-block;
   margin-bottom: 3px;
   font-style: normal;
-  font-weight: 500 !important;
   font-size: 16px;
   line-height: 24px;
   padding-top: 3px;
+  font-weight: 900;
 }
 .intro .description_text {
   padding-top: 0;
   margin-bottom: 0;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 900;
   font-size: 14px;
   line-height: 20px;
   color: #222;
