--- a/src/Organisms/Intro/style.module.scss
+++ b/src/Organisms/Intro/style.module.scss
@@ -5,7 +5,7 @@
 
   &_first {
     padding: 25px 0;
-    border-bottom: 1px solid blue;
+    border-bottom: 1px solid #27c7cb;
 
     &_title {
       display: flex;
@@ -13,7 +13,7 @@
 
       h1 {
         font-weight: 900;
-
+        color: #FFFFFF;
       }
     }
 
@@ -21,6 +21,7 @@
       img {
         width: 100%;
         height: 100%;
+        color: rgba(112,240,43,0.81);
       }
     }
 
@@ -29,8 +30,15 @@
       align-items: center;
       font-weight: 900;
 
+
       a {
         padding-top: 25px;
+        color: #FFFFFF;
+        transition: 0.5s;
+        &:hover {
+          color: #27c7cb;
+          transition: 0.5s;
+        }
       }
     }
   }
@@ -130,15 +138,21 @@
       line-height: 24px;
       padding-top: 3px;
       font-weight: 900;
+      color: #FFFFFF;
+      transition: 0.5s;
+      &:hover {
+        color: #27c7cb;
+        transition: 0.5s;
+      }
     }
     &_text {
       padding-top: 0;
       margin-bottom: 0;
       font-style: normal;
-      font-weight: 900;
       font-size: 14px;
       line-height: 20px;
-      color: #222;
+      color: #FFFFFF;
+      letter-spacing: 0.5px;
     }
   }
 }
