--- a/src/Organisms/Search API/style.module.css
+++ b/src/Organisms/Search API/style.module.css
@@ -1,6 +1,9 @@
 .search {
   position: relative;
   background: #202022;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 .search_first {
   width: 90%;
@@ -9,6 +12,7 @@
   border: 2px solid rgba(0, 0, 0, 0.3);
   border-radius: 7px;
   background: #FFFFFF;
+  flex: 1;
 }
 .search_header {
   display: flex;
