--- a/src/Atoms/InputsFields/style.module.css
+++ b/src/Atoms/InputsFields/style.module.css
@@ -1,12 +1,18 @@
+.inputs .inputs_wrapper {
+  align-items: center;
+}
 .inputs .inputs_wrapper_title {
   font-size: 24px;
   font-weight: 700;
-  color: black;
+  color: #FFFFFF;
   margin: 15px 0;
+  align-items: center;
 }
 .inputs .select {
   width: 450px;
   cursor: pointer;
+  color: black;
+  font-weight: 900;
 }
 
 /*# sourceMappingURL=style.module.css.map */
