--- a/src/Organisms/Intro/style.module.scss
+++ b/src/Organisms/Intro/style.module.scss
@@ -21,7 +21,7 @@
       img {
         width: 100%;
         height: 100%;
-        color: rgba(112,240,43,0.81);
+        color: rgba(112, 240, 43, 0.81);
       }
     }
 
@@ -35,6 +35,7 @@
         padding-top: 25px;
         color: #FFFFFF;
         transition: 0.5s;
+
         &:hover {
           color: #27c7cb;
           transition: 0.5s;
@@ -49,6 +50,7 @@
 
     &_statistics {
       text-align: center;
+
       a {
         line-height: 1;
         font-size: 1.8rem;
@@ -65,6 +67,7 @@
         background: #ffffff;
         border: 1px solid #27c7cb;
         transition: 0.5s;
+
         &:hover {
           color: #ffffff;
           background: #27c7cb;
@@ -79,14 +82,17 @@
     display: flex;
     padding: 25px;
     width: 100%;
+
     &_title {
       align-items: center;
       justify-content: center;
       margin: 0 auto;
+
       h3 {
         font-weight: 900;
       }
     }
+
     &_lists {
       display: flex;
       flex-wrap: wrap;
@@ -103,6 +109,7 @@
         @media screen and (min-width: 500px) {
           padding: 24px 0;
         }
+
         &_date {
           width: 55px;
           white-space: nowrap;
@@ -111,6 +118,7 @@
           justify-content: center;
           flex-direction: column;
           font-weight: 900;
+
           &_number {
             font-size: 48px;
             line-height: 100%;
@@ -118,6 +126,7 @@
             letter-spacing: -.12rem;
             font-weight: 900;
           }
+
           &_month {
             font-size: 14px;
             line-height: 20px;
@@ -127,9 +136,11 @@
       }
     }
   }
+
   .description {
     margin-left: 18px;
     padding-left: 0;
+
     &_link {
       display: inline-block;
       margin-bottom: 3px;
@@ -140,11 +151,13 @@
       font-weight: 900;
       color: #FFFFFF;
       transition: 0.5s;
+
       &:hover {
         color: #27c7cb;
         transition: 0.5s;
       }
     }
+
     &_text {
       padding-top: 0;
       margin-bottom: 0;
@@ -156,7 +169,6 @@
     }
   }
 }
-
 
 .intro_container {
   position: relative;
