--- a/src/Organisms/Search API/style.module.scss
+++ b/src/Organisms/Search API/style.module.scss
@@ -102,6 +102,7 @@
     font-weight: 700;
     transition: 0.3s;
     border: 1px solid #27c7cb;
+
     &:hover {
       color: #ffffff;
       background: #27c7cb;
@@ -119,13 +120,12 @@
   }
 }
 
-
 .modal {
   position: fixed;
-  background: rgba(0, 0, 0, 0.3);
   height: 100vh;
   width: 100vw;
   z-index: 10;
   top: 0;
   left: 0;
+  overflow: scroll;
 }
