--- a/src/Atoms/ModalData/style.module.scss
+++ b/src/Atoms/ModalData/style.module.scss
@@ -10,6 +10,7 @@
 
 .modalWindow_styles {
   background: #212020;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
